k8s/apps/development/openfaas/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: openfaas
  namespace: development
spec:
  hosts:
    - 'openfaas.${SECRET_DOMAIN}'
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 8080
            host: gateway.development.svc.cluster.local
          weight: 100
